--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -25,6 +25,7 @@
     <script>
         htmx.onLoad(function (content) {
             initFlowbite();
+            initTabs();
         });
     </script>
 </head>
