--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -232,10 +232,9 @@
                                     </svg>
                                 </div>
                                 <div>
-                                    <h5 class="leading-none text-2xl font-bold text-gray-900 dark:text-white pb-1">3.4k
-                                    </h5>
-                                    <p class="text-sm font-normal text-gray-500 dark:text-gray-400">Leads generated per
-                                        week</p>
+                                    <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white me-1">
+                                        Social Media Engagement</h5>
+
                                 </div>
                             </div>
                             <div>
@@ -251,17 +250,7 @@
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-2">
-                            <dl class="flex items-center">
-                                <dt class="text-gray-500 dark:text-gray-400 text-sm font-normal me-1">Money spent:</dt>
-                                <dd class="text-gray-900 text-sm dark:text-white font-semibold">$3,232</dd>
-                            </dl>
-                            <dl class="flex items-center justify-end">
-                                <dt class="text-gray-500 dark:text-gray-400 text-sm font-normal me-1">Conversion rate:
-                                </dt>
-                                <dd class="text-gray-900 text-sm dark:text-white font-semibold">1.2%</dd>
-                            </dl>
-                        </div>
+
 
                         <div id="column-chart"></div>
                         <div
@@ -331,7 +320,7 @@
                             <div class="flex-col items-center">
                                 <div class="flex items-center mb-1">
                                     <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white me-1">
-                                        Website traffic</h5>
+                                        Lead Sentiment Distribution</h5>
                                     <svg data-popover-target="chart-info" data-popover-placement="bottom"
                                         class="w-3.5 h-3.5 text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white cursor-pointer ms-1"
                                         aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
@@ -362,51 +351,7 @@
                                         <div data-popper-arrow></div>
                                     </div>
                                 </div>
-                                <button id="dateRangeButton" data-dropdown-toggle="dateRangeDropdown"
-                                    data-dropdown-ignore-click-outside-class="datepicker" type="button"
-                                    class="inline-flex items-center text-blue-700 dark:text-blue-600 font-medium hover:underline">31
-                                    Nov - 31 Dev <svg class="w-3 h-3 ms-2" aria-hidden="true"
-                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                            stroke-width="2" d="m1 1 4 4 4-4" />
-                                    </svg>
-                                </button>
-                                <div id="dateRangeDropdown"
-                                    class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-80 lg:w-96 dark:bg-gray-700 dark:divide-gray-600">
-                                    <div class="p-3" aria-labelledby="dateRangeButton">
-                                        <div date-rangepicker datepicker-autohide class="flex items-center">
-                                            <div class="relative">
-                                                <div
-                                                    class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                                                    <svg class="w-4 h-4 text-gray-500 dark:text-gray-400"
-                                                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                                        fill="currentColor" viewBox="0 0 20 20">
-                                                        <path
-                                                            d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
-                                                    </svg>
-                                                </div>
-                                                <input name="start" type="text"
-                                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                                    placeholder="Start date">
-                                            </div>
-                                            <span class="mx-2 text-gray-500 dark:text-gray-400">to</span>
-                                            <div class="relative">
-                                                <div
-                                                    class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                                                    <svg class="w-4 h-4 text-gray-500 dark:text-gray-400"
-                                                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                                        fill="currentColor" viewBox="0 0 20 20">
-                                                        <path
-                                                            d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
-                                                    </svg>
-                                                </div>
-                                                <input name="end" type="text"
-                                                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                                    placeholder="End date">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+
                             </div>
                             <div class="flex justify-end items-center">
                                 <button id="widgetDropdownButton" data-dropdown-toggle="widgetDropdown"
