--- a/templates/targets/components/target_items.html
+++ b/templates/targets/components/target_items.html
@@ -43,7 +43,7 @@
                             class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Edit</a>
                     </li>
                     <li>
-                        <a hx-post="" hx-target="#hashtag-list"
+                        <a hx-post="{% url 'targets:delete_target' target.id %}" hx-target="#targets-list"
                             hx-confirm="Are you sure you want to delete this hashtag?"
                             hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                             class="block px-4 py-2 text-sm text-red-600 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete</a>
