--- a/templates/targets/targets.html
+++ b/templates/targets/targets.html
@@ -23,8 +23,7 @@
 
 
                         <div class="flex flex-col sm:flex-row gap-2 w-full md:w-auto">
-                            <button type="button" data-modal-target="addHashtagModal"
-                                data-modal-toggle="addHashtagModal"
+                            <button type="button" data-modal-target="addTargetModal" data-modal-toggle="addTargetModal"
                                 class="w-full sm:w-auto text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                                 <svg class="w-4 h-4 text-white dark:text-white me-2" aria-hidden="true"
                                     xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -299,7 +298,7 @@
 
 </div>
 
-{% include 'hashtags/components/modals/add_hashtag.html' %}
+{% include 'targets/components/modals/add_target.html' %}
 
 <div id="filterDropdown" class="z-20 hidden px-3 pt-1 bg-white rounded-lg shadow w-90 dark:bg-gray-700 right-0">
     <div class="flex items-center justify-between pt-2 mb-2">
